trunk/Archive2/63/c2e6765f58a290/output
main.cpp:12:24: error: type 'std::initializer_list<const char *>' does not provide a subscript operator
    std::cout << restos[dist(rd)] << std::endl;
                 ~~~~~~^~~~~~~~~
1 error generated.
